[gd_scene load_steps=13 format=3 uid="uid://qs6ddpn2muhb"]

[ext_resource type="Script" uid="uid://c5dp2rdg68ap4" path="res://entities/lightning/lightning.gd" id="1_e22p1"]
[ext_resource type="Texture2D" uid="uid://du8ou2ti8sqmr" path="res://assets/lightning.png" id="2_545y2"]
[ext_resource type="Script" uid="uid://bhks5iivjxcqs" path="res://components/hitbox_component/hitbox_component.gd" id="2_kaww6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_545y2"]
atlas = ExtResource("2_545y2")
region = Rect2(0, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaww6"]
atlas = ExtResource("2_545y2")
region = Rect2(16, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkjns"]
atlas = ExtResource("2_545y2")
region = Rect2(32, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ofy"]
atlas = ExtResource("2_545y2")
region = Rect2(48, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vi8b"]
atlas = ExtResource("2_545y2")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdwly"]
atlas = ExtResource("2_545y2")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e78g"]
atlas = ExtResource("2_545y2")
region = Rect2(96, 0, 16, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_e22p1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_545y2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaww6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkjns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ofy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vi8b")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_fdwly")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_0e78g")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkjns"]
size = Vector2(7, 7)

[node name="Lightning" type="Node2D"]
z_index = 1
z_as_relative = false
scale = Vector2(2, 2)
script = ExtResource("1_e22p1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_e22p1")

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_kaww6")
actor = NodePath("..")
enabled = false
metadata/_custom_type_script = "uid://bhks5iivjxcqs"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_nkjns")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.2
direction = Vector2(0, -1)
spread = 70.0
initial_velocity_min = 80.0
initial_velocity_max = 150.0
angle_max = 180.0
scale_amount_max = 2.0
color = Color(0.388373, 0.607706, 1, 1)
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
